--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -2,13 +2,13 @@ CMD := arduino-cli
 CORE := arduino:megaavr
 FQBN := arduino:megaavr:uno2018
 INTERFACE := $(shell $(CMD) board list | grep $(FQBN) | awk '{print $$1}')
-SKETCH := src
+SRCDIR := src
 
 compile:
-	$(CMD) compile -b $(FQBN) $(SKETCH)
+	$(CMD) compile -b $(FQBN) $(SRCDIR)
 
 flush: compile
-	$(CMD) upload -p $(INTERFACE) --fqbn $(FQBN) $(SKETCH)
+	$(CMD) upload -p $(INTERFACE) --fqbn $(FQBN) $(SRCDIR)
 
 read:
 	screen $(INTERFACE) 9600
@@ -16,6 +16,7 @@ read:
 deps:
 	arduino-cli lib install WiFiNINA
 	arduino-cli lib install ArduinoHttpClient
+	arduino-cli lib install TM1637
 
 install:
 	$(CMD) core install $(CORE)
