--- a/backend/.golangci.yaml
+++ b/backend/.golangci.yaml
@@ -1,32 +1,110 @@
+version: "2"
 linters:
   enable:
+    - asasalint
+    - asciicheck
+    - bidichk
+    - bodyclose
+#    - canonicalheader
+#    - containedctx
     - contextcheck
+    - copyloopvar
+#    - cyclop
+    - decorder
+#    - depguard
+    - dogsled
+    - dupl
+    - dupword
     - durationcheck
-    - errcheck
+#    - err113
+#    - errcheck
+    - errchkjson
     - errname
     - errorlint
+    - exhaustive
+#    - exhaustruct
+    - exptostd
+    - fatcontext
+#    - forbidigo
+    - forcetypeassert
+#    - funcorder
+#    - funlen
+    - ginkgolinter
+    - gocheckcompilerdirectives
+    - gochecknoglobals
+    - gochecknoinits
+    - gochecksumtype
+#    - gocognit
+#    - goconst
     - gocritic
-    - gofmt
-    - gofumpt
-    - goimports
-    - gosimple
+    - gocyclo
+#    - godot
+    - godox
+    - goheader
+    - gomoddirectives
+    - gomodguard
+    - goprintffuncname
+    - gosec
+    - gosmopolitan
     - govet
+    - grouper
+    - iface
+    - importas
+    - inamedparam
     - ineffassign
+#    - interfacebloat
+#    - intrange
+#    - ireturn
+#    - lll
+    - loggercheck
+    - maintidx
+#    - makezero
+    - mirror
     - misspell
+#    - mnd
+    - musttag
     - nakedret
+#    - nestif
     - nilerr
+    - nilnesserr
     - nilnil
+#    - nlreturn
+#    - noctx
+    - nolintlint
+#    - nonamedreturns
+    - nosprintfhostport
+#    - paralleltest
+#    - perfsprint
     - prealloc
     - predeclared
     - promlinter
-    - revive
-    - staticcheck
-    - stylecheck
-    - typecheck
+    - protogetter
+    - reassign
+    - recvcheck
+#    - revive
+    - rowserrcheck
+    - sloglint
+    - spancheck
+    - sqlclosecheck
+#    - staticcheck
+    - tagalign
+#    - tagliatelle
+    - testableexamples
+    - testifylint
+#    - testpackage
+    - thelper
+    - tparallel
     - unconvert
     - unparam
     - unused
     - usestdlibvars
+    - usetesting
+#    - varnamelen
+    - wastedassign
+#    - whitespace
+#    - wrapcheck
+#    - wsl
+    - zerologlint
 
 linters-settings:
   # I'm biased and I'm enabling more than 100 checks
