--- a/backend/.golangci.yaml
+++ b/backend/.golangci.yaml
@@ -70,7 +70,7 @@ linters:
     - nilnil
 #    - nlreturn
 #    - noctx
-    - nolintlint
+#    - nolintlint
 #    - nonamedreturns
     - nosprintfhostport
 #    - paralleltest
